--- a/public/stylesheets/ffta.css
+++ b/public/stylesheets/ffta.css
@@ -9,7 +9,14 @@
 	color:white;
 	background-color:black;
 	border-right:3px solid white;
+}
 
+.selected_button{
+	float:left;
+	width: 5em;
+	color:green;
+	background-color:black;
+	border-right:3px solid white;
 }
 
 .job{
@@ -25,4 +32,29 @@
 	float:left;
 	width: 5em;
 	text-decoration:underline;
+}
+
+#chart {
+  height: 500px;
+}
+
+.node rect {
+  cursor: move;
+  fill-opacity: .9;
+  shape-rendering: crispEdges;
+}
+
+.node text {
+  pointer-events: none;
+  text-shadow: 0 1px 0 #fff;
+}
+
+.link {
+  fill: none;
+  stroke: #000;
+  stroke-opacity: .2;
+}
+
+.link:hover {
+  stroke-opacity: .5;
 }
